# Homework-Web-08

./: consumer.py  email_send_model.py  main.py  models.py  producer.py  pyproject.toml
