[tool.poetry]
name = "homework-web-08"
version = "0.1.0"
description = ""
authors = ["oleksandr-study <140350329+oleksandr-study@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.3"
mongoengine = "^0.28.2"
pymongo = "^4.6.2"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
